--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
----
-version: "2"
+version: "3.9"
 services:
   homer:
     image: b4bz/homer
-    #To build from source, comment previous line and uncomment below
-    #build: .
+    build: .
     container_name: homer
     volumes:
-      - /your/local/assets/:/www/assets
+      - ./assets:/www/assets
     ports:
       - 8080:8080
-    user: 1000:1000 # default
+    user: root
     environment:
       - INIT_ASSETS=1 # default
